# MGL

./: CMakeLists.txt
MGL/: spirv_cross_c.cpp
MGL/include/: MGLContext.h  MGLRenderer.h  error.h  glm_context.h  glm_params.h  matrix.h  mgl.h  mgl_common.h
MGL/include/GL/: bar_glue.h  glcorearb.h
MGL/src/: MGLRenderer.m  bar_glue.c  buffers.c  draw_buffers.c  error.c  framebuffers.c  get.c  gl_core.c  glm_context.c  matrix.c  mgl_funcs_to_be_implemented.c  mgl_safety.h  mgl_toolchain.c  non_core_unimplemented.c  pixel_utils.c  program.c  rendering.c  shaders.c  state.c  textures.c  uniforms.c  utils.c  vertex_arrays.c
